2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	Range: Remove get/set_update_policy(), to fix the build.

	* gtk/src/enums.hg: Remove the UpdateType enum.
	* gtk/src/range.hg: Remove get/set_update_policy() and the property,
	because they were removed from GTK+ 3.

2011-01-06  Murray Cumming  <murrayc@murrayc.com>

	TreeModel::iterator::operator--(): Use gtk_tree_model_iter_previous().

	* gtk/src/treeiter.ccg: Use the new C function instead of the code that we 
	copied from totem.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Cursor: Make the API public, not protected, fixing the previous commit.

	* gdk/src/cursor.hg: Fix my typo.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Cursor: Add create() methods. (this had the wrong commit message)

	* gdk/src/cursor.hg: Add create() methods, making the constructors protected, 
	because this should now be used via RefPtr.

2011-01-05  Murray Cumming  <murrayc@murrayc.com>

	Minor corrections to previous commit to make things clearer.

	* gtk/src/image.hg:
	* gtk/src/texttag.hg:
	* gtk/src/toolbar.hg:
	* gtk/src/window.hg: Remove mentions of removed properties, instead of 
	just commenting them out, because that makes them seem like something that 
	is yet to be done. 
	* gtk/src/filechooserbutton.hg: Add a comment saying that the dialog property 
	was commented out because it is construct-only and write-only.
	
	* gtk/src/cellview.hg: Likewise, remove the mention of the removed methods, 
	instead of just commenting it out.

2011-01-04  Krzesimir Nowak  <qdlacz@gmail.com>

	Quickly fix the build with latest Gtk+.

	gtk/src/gtk_methods.defs: Regenerated with h2def.py.
	gtk/src/aboutdialog.hg: Changed the conversion.
	gtk/src/cellview.hg: For now commented the deleted methods.
	gtk/src/filechooserbutton.hg:
	gtk/src/image.hg:
	gtk/src/texttag.hg:
	gtk/src/toolbar.hg:
	gtk/src/window.hg: Gmmproc is complaining about failed lookup for
	some properties, so they are commented out.
