@@ -142,6 +142,8 @@ gdk/gdkmm/rgbcmap.cc
 gdk/gdkmm/rgbcmap.h
 gdk/gdkmm/screen.cc
 gdk/gdkmm/screen.h
+gdk/gdkmm/timecoord.cc
+gdk/gdkmm/timecoord.h
 gdk/gdkmm/types.cc
 gdk/gdkmm/types.h
 gdk/gdkmm/visual.cc
