@@ -25,6 +25,17 @@
 namespace Gdk
 {
 
+ArrayHandle_TimeCoords Device::get_history(const Glib::RefPtr<Window>& window, guint32 start, guint32 stop) const
+{
+  GdkTimeCoord** coords = 0;
+  int events_count = 0;
+
+  // we don't care about returned value - false means that either getting history is unsupported or no motion events happened.
+  // it is undistinguishable.
+  gdk_device_get_history(const_cast<GdkDevice*>(gobj()), Glib::unwrap(window), start, stop, &coords, &events_count);
+  return ArrayHandle_TimeCoords(coords, events_count, Glib::OWNERSHIP_DEEP);
+}
+
 void Device::get_position(int& x, int& y) const
 {
   gdk_device_get_position(const_cast<GdkDevice*>(gobj()), 0, &x, &y);
