@@ -6,7 +6,7 @@ gdkmm_files_defs =		\
 	gdk_extra.defs		\
 	gdk_methods.defs	\
 	gdk_extra_objects.defs	\
-	gdk_pixbuf_methods.defs		\
+	gdk_pixbuf_methods.defs	\
 	gdk_pixbuf_enums.defs	\
 	gdk_signals.defs	\
 	gdk_docs.xml		\
@@ -16,7 +16,7 @@ gdkmm_files_hg =		\
 	color.hg		\
 	cursor.hg		\
 	device.hg		\
-	devicemanager.hg		\
+	devicemanager.hg	\
 	display.hg		\
 	displaymanager.hg	\
 	dragcontext.hg		\
@@ -27,8 +27,9 @@ gdkmm_files_hg =		\
 	pixbufformat.hg		\
 	pixbufloader.hg		\
 	rectangle.hg		\
-	rgba.hg \
+	rgba.hg			\
 	screen.hg		\
+	timecoord.hg		\
 	types.hg		\
 	visual.hg		\
 	window.hg
