@@ -1,3 +1,11 @@
+2011-01-06  Krzesimir Nowak  <qdlacz@gmail.com>
+
+	Wrapped gdk_device_get_history().
+
+	* gdk/src/device.[hg|ccg]: Wrapped gdk_device_wrap_history().
+	* gdk/src/timecoord.[hg|ccg]: New files.
+	* gdk/src/filelist.am: Added new files to build.
+
 2011-01-06  Murray Cumming  <murrayc@murrayc.com>
 
 	Range: Remove get/set_update_policy(), to fix the build.
